--- a/dex-maven-plugin/pom.xml
+++ b/dex-maven-plugin/pom.xml
@@ -10,19 +10,33 @@
     <name>Dex2Jar Maven plugin</name>
 
 
-    <parent>
-        <groupId>com.googlecode.dex2jar</groupId>
-        <artifactId>dex2jar</artifactId>
-        <version>1.1</version>
-    </parent>
-
+<!--    <prerequisites>
+         define the version need to run this plugin 
+        <maven>3.2.4</maven>
+    </prerequisites>-->
 
     <dependencies>
         <dependency>
             <groupId>org.apache.maven</groupId>
-            <artifactId>maven-plugin-api</artifactId>
+            <artifactId>maven-core</artifactId>
             <version>3.2.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-artifact</artifactId>
+            <version>3.2.5</version>
+            <scope>provided</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-compat</artifactId>
+            <version>3.2.5</version>
+        </dependency>
+
+
 
         <!-- dependencies to annotations -->
         <dependency>
@@ -34,7 +48,7 @@
         <dependency>
             <groupId>org.apache.maven.plugin-testing</groupId>
             <artifactId>maven-plugin-testing-harness</artifactId>
-            <version>3.2.0</version>
+            <version>3.3.0</version>
             <scope>test</scope>
             <type>jar</type>
         </dependency>
